@@ -1,3 +1,6 @@
+Clients:
+- "mosquitto_pub -l" now no longer limited to 1024 byte lines. Closes #478917.
+
 1.4.4 - 20150916
 ================
 
